# kanoa

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  agents.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.agent/rules/: consult-copilot.md
.agent/workflows/: commit.md  test.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: README.md  TESTING_GITHUB_COPILOT.md
docs/analysis/: 20251122-knowledge-base-strategy.md  20251211-vertex-rag-cost-breakdown.md
docs/guides/: vertex-rag-academic-papers.md  vertex-rag-quickstart-gcs.md  vertex-rag-user-guide.md
docs/planning/: Analytics_Interpreter_Product_Spec.md  roadmap.md  vertex-rag-gcs-drive-implementation.md
docs/source/: index.md  quickstart.md
examples/: 10_minutes_to_kanoa.ipynb  2_minutes_to_kanoa.ipynb  README.md  context_caching_demo.ipynb  deep_research_demo.ipynb  gemini_context_caching_demo.ipynb  projectile_debug.py  prompts.yaml  quickstart_10min.ipynb  verify_installation.py
examples/knowledge_base_demo/: kb_climate_science.ipynb
kanoa/: __init__.py  cli.py  config.py  pricing.json  pricing.py
kanoa/backends/: __init__.py  azure_openai.py  base.py  claude.py  copilot.py  deep_research.py  deep_research_proto.py  example_custom_research.py  gemini.py  gemini_deep_research.py  github_copilot.py  molmo.py  openai.py  research_reference.py
kanoa/core/: __init__.py  interpreter.py  token_guard.py  types.py
kanoa/knowledge_base/: __init__.py  base.py  manager.py  pdf_kb.py  text_kb.py
kanoa/utils/: __init__.py  auth.py  converters.py  logging.py  notebook.py  prompts.py
notebooks/: 10_minutes_to_kanoa.ipynb
tests/: test_cli_optional_backends.py
tests/integration/: README.md  conftest.py  test_claude_integration.py  test_deep_research.py  test_dynamic_kb.py  test_example_custom_research.py  test_gemini_cache_persistence.py  test_gemini_caching_integration.py  (+9 more)
(+38 files in other folders)
