[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gemini: marks tests that use the Gemini backend",
  "claude: marks tests that use the Claude backend",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"

# Disallow dynamic typing (STRICTER than pandas)
disallow_any_unimported = true
disallow_any_generics = true
warn_return_any = true

# Untyped definitions and calls
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_decorators = false

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true

# Miscellaneous strictness flags (from pandas)
strict_equality = true
enable_error_code = "ignore-without-code"


[[tool.mypy.overrides]]
module = ["setuptools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "pandas.*",
  "google.genai.*",
  "anthropic.*",
  "IPython.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "_pytest.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_any_decorated = false
disallow_any_generics = false
